--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
   }
 }
 body {
-  align-items: center;
+  
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -248,7 +248,7 @@ a.contact{
   width:100%;
   display:flex;
   flex-direction: column;
-
+  height:90vh;
 }
 
 .media-title{
@@ -275,13 +275,13 @@ a.contact{
   
   margin-top: 20px;
   padding-left: 40px;
-  padding-bottom: 60px;
+  padding-bottom: 200px;
 }
 
 .media-item{
   display: flex;
   width: 38%;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
   align-items:center;
   margin:1%;  /*两个一行*/
   flex-wrap:wrap;
@@ -320,7 +320,67 @@ margin-top: 0px;
   color:white
 }
 
-.blog{
+/* .blog{
   background-color: #f4f3ee;
   height:120px
+} */
+.imgs-t{
+  margin-bottom: 5px;
+  margin-top:10px;
+}
+.imgs-title{
+  margin-left: 30px;
+ 
+  display:flex;
+  flex-direction:column;
+  margin-bottom: 5px;
+}
+.imgs-title1{
+  color:#6b8f97;
+  margin-bottom:2px;
+  font-size:35px;
+}
+.imgs-title2{
+  color:#9da2a3;
+}
+.imgs{
+  height:80vh;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f3ee;
+
+  width:90vw;
+  overflow:hidden;
+
+}
+
+.panel{
+  border-radius:50px;
+  background-position:center;
+  justify-content: center;
+  border-color: #f4f3ee;
+  height:70vh;
+  flex:0.5;
+  margin:10px;
+  background-size: cover;
+  position:relative;
+  -webkit-transition:all 700ms ease-in;
+}
+.panel.active{
+  flex:5;
+}
+
+.panel h3{
+  position:absolute;
+  bottom:20px;
+  left:20px;
+  font-size:20px;
+  margin:0;
+  opacity:0;
+  color:white;
+}
+.panel.active h3{
+  opacity:1;
+  transition:opacity 0.3s ease-in 0.4s;
 }
